added email client that would be able to send notifications
